--- a/react-website/src/index.css
+++ b/react-website/src/index.css
@@ -11,3 +11,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+div {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  /* width: 120px;
+  height: 120px;
+  border: 20px solid #969696;
+  background: #d9dbda;
+  margin: 10px; */
+}
+
+.btn{
+  border-radius: 8px;
+  border-color: green;
+  background-color: rgb(240, 240, 240);
+  padding: 5px 10px;
+}
+.btn:hover{
+  background-color: rgb(207, 207, 207);
+  cursor: pointer;
+}
