bug fixes and a bit of styling

--- a/react-website/src/components/seeding.css
+++ b/react-website/src/components/seeding.css
@@ -2,5 +2,7 @@
   /* border:1px solid rgb(134, 134, 134); */
 }
 .seed-wrapper{
+  background-color: rgb(238, 238, 238);
   border:1px solid rgb(134, 134, 134);
+  border-radius: 10px;
 }
