--- a/react-website/src/components/discovery.css
+++ b/react-website/src/components/discovery.css
@@ -1,9 +1,17 @@
-.discovery-wrapper{
+.discovery-wrapper {
   display:flex;
   flex-direction: column;
 }
 
-.banner{
+.discovery-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: auto;
+}
+
+.banner {
   position: absolute;
   top: 0;
   left: 0;
@@ -15,42 +23,64 @@
   grid-template-columns: 1fr 1fr;
 }
 
-.banner-btn{
+.banner-btn {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   margin: auto;
 }
-.banner-btn:hover{
+.banner-btn:hover {
   background-color:grey;
+  cursor: pointer;
 }
-.icon{
+
+.export-btn {
+  margin: 15px auto;
+  border: 1px solid rgb(0, 172, 9);
+  background-color: rgb(0, 66, 0);
+  border-radius: 10px;
+  width: 60%;
+  height: 60px;
+}
+.export-btn:hover {
+  cursor: pointer;
+  background-color: rgb(0, 48, 0);
+}
+.text-wrapper {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  margin: auto;
+}
+.export-text {
+  text-align: center;
+  margin: auto;
+  margin-right: 5px;
+  color: rgb(216, 216, 216)
+}
+
+.icon {
   margin-top: 25%;
 }
 
-.discovery-container{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: auto;
-}
-
-.drop-area{
+.drop-area {
   width: 17%;
   height: 300px;
 }
 
-.right{
-  width: 20%;
+.right {
+  width: 25%;
   min-width: 200px;
   right: 0;
 }
+.right > .list-container {
+  width: 100% ;
+}
 
-.left{
+.left {
   display:flex;
   flex-direction: row;
-  width: 80%;
+  width: 75%;
 }
 .left > #left {
   margin-left: auto;
