--- a/react-website/src/components/discovery.css
+++ b/react-website/src/components/discovery.css
@@ -4,34 +4,16 @@
 }
 
 .discovery-container {
-  display: flex;
+  /* display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  width: auto;
-}
-
-.banner {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 50px;
-  width: 100px;
-  background-color: rgb(0, 66, 0);
-  border-bottom-right-radius: 20px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.banner-btn {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  margin: auto;
-}
-.banner-btn:hover {
-  background-color:grey;
-  cursor: pointer;
+  width: auto; */
+  max-height: 450px;
+  padding-top: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .export-btn {
