--- a/react-website/src/components/list.css
+++ b/react-website/src/components/list.css
@@ -1,16 +1,21 @@
 .list-container{
   width: 350px;
-  max-height: 400px;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  white-space: nowrap;
-  background-color: rgb(236, 236, 236);
-  border:1px solid rgb(134, 134, 134);
+  background-color: white;
+  border: 5px solid rgb(0, 66, 0);
+  border-radius: 5px;
 }
 .list-container > h3{
   margin: 0;
   padding: 5px;
   position: sticky;
   top: 0;
-  background-color: lightgray;
+  background-color: rgb(0, 66, 0);
+  color: white;
+  /* border-radius: 10px; */
+}
+.list-body {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  white-space: nowrap;
+  max-height: 395px; 
 }
