--- a/react-website/src/components/discovery.css
+++ b/react-website/src/components/discovery.css
@@ -15,7 +15,13 @@
   flex-direction: row;
   justify-content: center;
 }
-
+.export-btns-wrapper {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  width: auto;
+  flex-direction: row;
+}
 .export-btn {
   margin: 15px auto;
   border: 1px solid rgb(0, 172, 9);
@@ -24,7 +30,19 @@
   width: 60%;
   height: 60px;
 }
+.copy-btn {
+  margin: 15px auto;
+  border: 1px solid rgb(0, 172, 9);
+  background-color: rgb(0, 66, 0);
+  border-radius: 10px;
+  width: 30%;
+  height: 60px;
+}
 .export-btn:hover {
+  cursor: pointer;
+  background-color: rgb(0, 48, 0);
+}
+.copy-btn:hover {
   cursor: pointer;
   background-color: rgb(0, 48, 0);
 }
