--- a/react-website/src/components/seedingItem.css
+++ b/react-website/src/components/seedingItem.css
@@ -1,6 +1,6 @@
 .seed-item{
-  display: flex;
-  flex-direction: row;
+  grid-template-columns: 7fr 1fr;
+  display: grid;
   margin-right: 0px;
   max-width: 300px;
   border-bottom: 1px solid rgb(134, 134, 134);
